applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
/*!
 * <!--
 *     Copyright (C) 2023 Dynamic Solutions
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 * -->
 */

@use 'src/variables-helpers';

@use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;

@mixin m-table-of-content {
  .table-label {
    color: var(--kyanite-gray-40) !important;
    font-weight: var(--kyanite-weight-medium);
    @extend .mb-5;
    display: block;
  }

  .table-content-list {
    @extend .mb-4;
    @extend .pt-2;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    align-items: flex-start;

    > li:not(:last-child) {
      margin-bottom: var(--spacing-3);
    }

    @supports (scrollbar-width: auto) {
      scrollbar-color: var(--kyanite-gray-15) transparent;
      scrollbar-width: thin;
    }

    @supports not (scrollbar-width: auto) {
      &::-webkit-scrollbar-thumb {
        background: var(--kyanite-gray-15);
      }
      &::-webkit-scrollbar-track {
        background: transparent;
      }
      &::-webkit-scrollbar {
        max-width: 10px;
      }
    }

    li {
      a.button {        
        @extend .p-0;
        @include link.a-animated-underline-link;
        display: inline-block;
        font-weight: var(--kyanite-weight-medium);
        height: unset;
        text-align: left;
        white-space: initial;
        color: var(--kyanite-gray-15) !important;
        line-height: var(--line-height-150);
        text-decoration: none;
        border-radius: 0 !important;
        &:hover {
          background-color: transparent;
        }
      }
    }
    .table-content-list-inner { // second and lower levels list
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      margin-top: var(--spacing-3);
      li:not(:last-child) {
        margin-bottom: var(--spacing-3);
      }
    }
  }

  .table-content-button {
    @include link.a-animated-underline-link;
    color: var(--kyanite-gray-15) !important;
    display: inline-block;
  }
}

